<resources>
    <string name="app_name">ZFileTransfer - FTP Client</string>

    <!-- Connection Ftp Input Data -->
    <string name="name">Name</string>
    <string name="host">Host</string>
    <string name="username">Username</string>
    <string name="port">Port</string>
    <string name="password">Password</string>

    <!-- result message -->
    <string name="connection_created_successfully">Connection created successfully</string>
    <string name="fail_on_create_connection">Fail on create connection</string>
    <string name="connection_deleted_successfully">Connection deleted successfully</string>
    <string name="connection_edited_successfully">Connection edited successfully</string>
    <string name="error_edit_id_undefined">Error on edit connection: ID is not seted</string>

    <!-- warning -->
    <string name="are_you_sure">are you sure?</string>
    <string name="really_delete_connection">Do you really want to delete this connection?</string>

    <!-- action -->
    <string name="connecting">connecting</string>
    <string name="trying_connect_server">Trying to connect with server, wait a moment.</string>

    <!-- Activity title -->
    <string name="new_connection">New connection</string>
    <string name="edit_connection">Edit connection</string>

    <!-- action button -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
</resources>
