<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/form_connection_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_connection"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorError"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/inputConnName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textNoSuggestions"
                    android:singleLine="true"
                    android:importantForAutofill="no" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/host" />

                <EditText
                    android:id="@+id/inputConnHost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textNoSuggestions"
                    android:singleLine="true"
                    android:importantForAutofill="no" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/port" />

                <EditText
                    android:id="@+id/inputConnPort"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:singleLine="true"
                    android:importantForAutofill="no" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/inputConnUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textNoSuggestions"
                    android:singleLine="true"
                    android:importantForAutofill="no" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/inputConnPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword|textNoSuggestions"
                    android:singleLine="true"
                    android:importantForAutofill="no" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginTop="15dp"
                android:gravity="end">

                <Button
                    android:id="@+id/save_connection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@drawable/button"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:id="@+id/cancel_connection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:background="@drawable/button" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</ScrollView>